--- a/pages/over-ons.html
+++ b/pages/over-ons.html
@@ -108,7 +108,7 @@
     </nav>
     <!-- navbar section ended -->
 
-    <section>
+    <section class="py-28">
         <div class="container mx-auto px-4 py-5 md:py-12 lg:py-10 text-center">
             <h1 class="font-passenger text-3xl sm:text-4xl md:text-5xl lg:text-5xl font-bold text-[#722f37] mb-1 md:mb-1">
                 Over CheersTag
@@ -182,7 +182,7 @@
                 <p class="font-montserrat text-start text-[#5e262c] leading-tight">CheersTag verbindt mensen, niet alleen door wat we geven, maar ook door
                     hoe we het geven. Een kleine, betaalbare toevoeging met een onbetaalbare emotionele waarde.</p>
             </div>
-            <p class="text-base sm:text-lg md:text-md my-3 text-[#722f37] leading-relaxed md:leading-loose font-normal font-passenger">
+            <p class="text-base sm:text-lg md:text-md mb-5 text-[#722f37] leading-relaxed md:leading-loose font-normal font-passenger">
                 Want een goed geschenk verdient een blijvende herinnering.
             </p>
         </div>
