--- a/pages/werkt.html
+++ b/pages/werkt.html
@@ -109,7 +109,7 @@
     <!-- navbar section ended -->
 
     <!-- main section started  -->
-    <section class="bg-[#f4e6d3] shadow-lg">
+    <section class="bg-[#f4e6d3] shadow-lg lg:py-20 py-12">
 
         <div class="container mx-auto px-4 py-5 md:py-12 lg:py-10 text-center">
             <h1 class="font-passenger text-3xl sm:text-4xl md:text-5xl lg:text-5xl font-bold text-[#722f37] mb-1 md:mb-1">
