--- a/pages/boodschap.html
+++ b/pages/boodschap.html
@@ -192,25 +192,24 @@
 
                     <!-- pricing section stack started -->
                     <div class="grid gap-2 md:gap-3 grid-cols-1" id="accordion-collapse-body-1">
-                        <label
-                            class="has-[:checked]:bg-white/30 has-[:checked]:text-indigo-900 has-[:checked]:ring-indigo-200 has-[:checked]:ring-2 cursor-pointer bg-white/40 hover:bg-white/20 w-auto px-2 md:px-3 py-1 rounded-md flex justify-between items-center shadow">
-                            <!-- icon and description -->
-                            <div class="flex items-center gap-x-2">
-                                <div class="items-center p-1 md:p-2 rounded-full bg-[#f5e7d6]">
-                                    <img src="../assets/icons/camera.svg" alt="camera" class="h-7 w-7 md:h-9 md:w-9">
-                                </div>
-                                <div class="p-1 md:p-2">
-                                    <p class="font-semibold font-fancy text-base md:text-lg text-start leading-tight">trenger</p>
-                                    <p class="text-gray-600 text-sm text-start leading-tight font-montserrat">Voeg een speciale foto toe aan je bericht</p>
-                                </div>
-                            </div>
-                            <!-- price and input section -->
-                            <div class="flex items-center gap-x-2">
-                                <p class="text-[#722f37] text-sm md:text-base font-montserrat">€ 1.95</p>
-                                <input type="radio" name="payment"
-                                    class="checked:border-indigo-500 h-4 w-4 md:h-5 md:w-5" />
-                            </div>
-                        </label>
+                       <label class="has-[:checked]:bg-white/30 has-[:checked]:text-indigo-900 has-[:checked]:ring-indigo-200 has-[:checked]:ring-2 cursor-pointer bg-white/40 hover:bg-white/20 w-auto px-2 md:px-3 py-1 rounded-md flex justify-between items-center shadow">
+    <!-- icon and description -->
+    <div class="flex items-center gap-x-2">
+        <div class="items-center p-1 md:p-2 rounded-full bg-[#f5e7d6]">
+            <img src="../assets/icons/camera.svg" alt="camera" class="h-7 w-7 md:h-9 md:w-9">
+        </div>
+        <div class="p-1 md:p-2">
+            <p class="font-semibold font-fancy text-base md:text-lg text-start leading-tight">trenger</p>
+            <p class="text-gray-600 text-sm text-start leading-tight font-montserrat">Voeg een speciale foto toe aan je bericht</p>
+        </div>
+    </div>
+    <!-- price and input section -->
+    <div class="flex items-center gap-x-2">
+        <p class="text-[#722f37] text-sm md:text-base font-montserrat">€ 1.95</p>
+        <input type="radio" name="payment" 
+               class="appearance-none h-4 w-4 md:h-5 md:w-5 rounded-full border-2 border-gray-300 checked:border-[#722f37] checked:bg-[#722f37] checked:ring checked:ring-[#722f37] checked:ring-offset-2 transition-all" />
+    </div>
+</label>
 
                         <label
                             class="has-[:checked]:bg-white/30 has-[:checked]:text-indigo-900 has-[:checked]:ring-indigo-200 has-[:checked]:ring-2 cursor-pointer bg-white/40 hover:bg-white/20 w-auto px-2 md:px-3 py-1 rounded-md flex justify-between items-center shadow">
@@ -229,7 +228,7 @@
                             <div class="flex items-center gap-x-2">
                                 <p class="text-[#722f37] text-sm md:text-base font-montserrat">€ 2.95</p>
                                 <input type="radio" name="payment"
-                                    class="checked:border-indigo-500 h-4 w-4 md:h-5 md:w-5" />
+                                    class="appearance-none h-4 w-4 md:h-5 md:w-5 rounded-full border-2 border-gray-300 checked:border-[#722f37] checked:bg-[#722f37] checked:ring checked:ring-[#722f37] checked:ring-offset-2 transition-all" />
                             </div>
                         </label>
 
@@ -250,7 +249,7 @@
                             <div class="flex items-center gap-x-2">
                                 <p class="text-[#722f37] text-sm md:text-base font-montserrat">€ 3.95</p>
                                 <input type="radio" name="payment"
-                                    class="checked:border-indigo-500 h-4 w-4 md:h-5 md:w-5" />
+                                    class="appearance-none h-4 w-4 md:h-5 md:w-5 rounded-full border-2 border-gray-300 checked:border-[#722f37] checked:bg-[#722f37] checked:ring checked:ring-[#722f37] checked:ring-offset-2 transition-all" />
                             </div>
                         </label>
                     </div>
