--- a/pages/partners.html
+++ b/pages/partners.html
@@ -114,7 +114,7 @@
     </nav>
     <!-- navbar section ended -->
 
-    <section class="my-8">
+    <section class="my-8 py-28">
 
         <div class="container flex-col justify-center mx-auto px-4 py-5 md:py-12 lg:py-10 lg:w-[50%]">
             <h1 class="text-3xl sm:text-4xl md:text-5xl lg:text-5xl font-bold text-[#722f37] mb-1 md:mb-1 text-start font-passenger">
