--- a/pages/boodschap.html
+++ b/pages/boodschap.html
@@ -115,7 +115,7 @@
 
     <!-- form section started -->
     <section>
-        <div class="flex items-center justify-center p-4 md:p-10 my-4 md:my-8">
+        <div class="flex items-center justify-center p-4 md:p-10 md:mb-20 ">
             <!-- Author: FormBold Team -->
             <form class="w-full max-w-auto md:w-fit mx-auto mt-8 md:mt-20 p-4 md:p-5 bg-white rounded-lg shadow-xl">
                 <h2 class="text-2xl md:text-4xl font-bold font-passenger text-[#722f37] mb-4 md:mb-6">Maak je unieke boodschap</h2>
@@ -259,7 +259,7 @@
                 <!-- check box -->
                 <div class="flex items-start mb-4 mt-2">
                     <input type="checkbox" id="rememberMe"
-                        class="w-4 h-4 border border-gray-300 rounded bg-gray-50 mt-1 focus:ring-3 focus:ring-blue-300" />
+                        class="w-4 h-4 border border-gray-300 rounded bg-gray-50 mt-1 focus:ring-3 focus:ring-blue-300 accent-[#722f37]" />
                     <label for="rememberMe" class="ml-2 text-xs md:text-sm leading-tight text-gray-600">
                         <span class="text-[#722f37]">Ik</span> ga akkoord met de <span class="text-[#722f37]">algemene
                             voorwaarden</span> en het <span class="text-[#722f37]">privacybeleid</span><br />van VinNote
