--- a/pages/over-ons.html
+++ b/pages/over-ons.html
@@ -108,7 +108,7 @@
     </nav>
     <!-- navbar section ended -->
 
-    <section class="py-28">
+    <section class="pb-28 pt-16">
         <div class="container mx-auto px-4 py-5 md:py-12 lg:py-10 text-center">
             <h1 class="font-passenger text-3xl sm:text-4xl md:text-5xl lg:text-5xl font-bold text-[#722f37] mb-1 md:mb-1">
                 Over CheersTag
