--- a/pages/over-ons.html
+++ b/pages/over-ons.html
@@ -130,7 +130,7 @@
                     deze eigenlijk gekregen?" Een klein, menselijk probleem dat we allemaal kennen. Want een cadeau
                     zonder context verliest zijn waarde en je weet niet eens meer wie je zou moeten bedanken.</p>
                 <br>
-                <p class="text-base sm:text-md md:text-lg text-[#722f37] leading-tight font-montserrat mt-4">Wij bij CheersTag geloven dat elk geschenk een verhaal vertelt. Daarom
+                <p class="font-montserrat text-start text-[#5e262c] leading-relaxed">Wij bij CheersTag geloven dat elk geschenk een verhaal vertelt. Daarom
                     hebben we CheersTag gecreëerd - een eenvoudige maar krachtige oplossing die elk cadeau verbindt met
                     een blijvende herinnering.</p>
             </div>
