--- a/index.html
+++ b/index.html
@@ -24,17 +24,18 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between h-16 items-center">
                 <!-- brand name  -->
-                <div class="flex-shrink-0">
+                <!-- <div class="flex-shrink-0">
                     <a href="#" class="text-xl font-bold text-[#722f37]">
                         <h2 class="font-bold font-passenger text-[#722f37] text-[30px] ">
                             Cheers<span class="text-[#802311]">Tag</span>
                         </h2>
                     </a>
-                </div>
+                </div> -->
 
                 <!-- Logo -->
                 <div class="flex-shrink-0">
-                    <a href="#" class="text-xl font-bold text-[#722f37]"></a>
+                    <!-- Responsive logo with different sizes for different screens -->
+                    <img class="h-8 md:h-10 lg:h-12 w-auto" src="./assets/logo/Cheerstag.png" alt="Cheerstag logo">
                 </div>
 
                 <!-- Desktop Menu with equal spacing -->
