--- a/pages/partners.html
+++ b/pages/partners.html
@@ -24,22 +24,14 @@
 </head>
 
 <body>
-    <!-- navbar section started -->
+     <!-- navbar section started -->
     <nav class="bg-[#f5e7d6] border-b border-[#d4cabe]">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between h-16 items-center">
-                <!-- brand name  -->
-                <div class="flex-shrink-0">
-                    <a href="#" class="text-xl font-bold text-[#722f37]">
-                        <h2 class="font-bold font-passenger text-[#722f37] text-[30px] ">
-                            Cheers<span class="text-[#802311]">Tag</span>
-                        </h2>
-                    </a>
-                </div>
-
                 <!-- Logo -->
                 <div class="flex-shrink-0">
-                    <a href="#" class="text-xl font-bold text-[#722f37]"></a>
+                    <!-- Responsive logo with different sizes for different screens -->
+                    <img class="h-8 md:h-10 lg:h-12 w-auto" src="../assets/logo/Cheerstag.png" alt="Cheerstag logo">
                 </div>
 
                 <!-- Desktop Menu with equal spacing -->
@@ -94,16 +86,16 @@
             <div class="px-2 pt-2 pb-3 space-y-2 sm:px-3 text-center items-center">
                 <a href="../index.html"
                     class="block px-3 py-2 rounded-md text-base font-medium text-[#722f37] hover:text-[#f5e7d6] hover:bg-[#722f37]">Home</a>
-                <a href="./boodschap.html"
+                <a href="./pages/boodschap.html"
                     class="block px-3 py-2 rounded-md text-base font-medium text-[#722f37] hover:text-[#f5e7d6] hover:bg-[#722f37]">Maak
                     je unieke boodschap</a>
-                <a href="./werkt.html"
+                <a href="./pages/werkt.html"
                     class="block px-3 py-2 rounded-md text-base font-medium text-[#722f37] hover:text-[#f5e7d6] hover:bg-[#722f37]">Hoe
                     het werkt</a>
-                <a href="./over-ons.html"
+                <a href="./pages/over-ons.html"
                     class="block px-3 py-2 rounded-md text-base font-medium text-[#722f37] hover:text-[#f5e7d6] hover:bg-[#722f37]">Over
                     ons</a>
-                <a href="./partners.html"
+                <a href="./pages/partners.html"
                     class="flex justify-center items-center w-full bg-[#722f37] text-white px-4 py-2 rounded-md hover:bg-[#5a252c] transition duration-300 mt-2">
                     <button>
                         Partners
@@ -114,7 +106,7 @@
     </nav>
     <!-- navbar section ended -->
 
-    <section class="my-8 py-28">
+    <section class="my-8 py-8">
 
         <div class="container flex-col justify-center mx-auto px-4 py-5 md:py-12 lg:py-10 lg:w-[50%]">
             <h1 class="text-3xl sm:text-4xl md:text-5xl lg:text-5xl font-bold text-[#722f37] mb-1 md:mb-1 text-start font-passenger">
