--- a/pages/over-ons.html
+++ b/pages/over-ons.html
@@ -18,29 +18,21 @@
 </head>
 
 <body>
-    <!-- navbar section started -->
+     <!-- navbar section started -->
     <nav class="bg-[#f5e7d6] border-b border-[#d4cabe]">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between h-16 items-center">
-                <!-- brand name  -->
-                <div class="flex-shrink-0">
-                    <a href="#" class="text-xl font-bold text-[#722f37]">
-                         <h2 class="font-bold font-passenger text-[#722f37] text-[30px] ">
-                            Cheers<span class="text-[#802311]">Tag</span>
-                        </h2>
-                    </a>
-                </div>
-
                 <!-- Logo -->
                 <div class="flex-shrink-0">
-                    <a href="#" class="text-xl font-bold text-[#722f37]"></a>
+                    <!-- Responsive logo with different sizes for different screens -->
+                    <img class="h-8 md:h-10 lg:h-12 w-auto" src="../assets/logo/Cheerstag.png" alt="Cheerstag logo">
                 </div>
 
                 <!-- Desktop Menu with equal spacing -->
                 <div class="hidden md:flex flex-1 justify-center items-center mx-auto">
                     <div class="flex space-x-4">
                         <a href="../index.html"
-                            class="text-[#722f37] hover:text-[#802311] px-3 py-2 text-sm font-semibold">Home</a>
+                            class="text-[#722f37] hover:text-[#802311] px-3 py-2 text-sm font-bold">Home</a>
                         <a href="./boodschap.html"
                             class="text-[#722f37] hover:text-[#802311] px-3 py-2 text-sm font-semibold">Maak je unieke
                             boodschap</a>
@@ -88,16 +80,16 @@
             <div class="px-2 pt-2 pb-3 space-y-2 sm:px-3 text-center items-center">
                 <a href="../index.html"
                     class="block px-3 py-2 rounded-md text-base font-medium text-[#722f37] hover:text-[#f5e7d6] hover:bg-[#722f37]">Home</a>
-                <a href="./boodschap.html"
+                <a href="./pages/boodschap.html"
                     class="block px-3 py-2 rounded-md text-base font-medium text-[#722f37] hover:text-[#f5e7d6] hover:bg-[#722f37]">Maak
                     je unieke boodschap</a>
-                <a href="./werkt.html"
+                <a href="./pages/werkt.html"
                     class="block px-3 py-2 rounded-md text-base font-medium text-[#722f37] hover:text-[#f5e7d6] hover:bg-[#722f37]">Hoe
                     het werkt</a>
-                <a href="./over-ons.html"
+                <a href="./pages/over-ons.html"
                     class="block px-3 py-2 rounded-md text-base font-medium text-[#722f37] hover:text-[#f5e7d6] hover:bg-[#722f37]">Over
                     ons</a>
-                <a href="./partners.html"
+                <a href="./pages/partners.html"
                     class="flex justify-center items-center w-full bg-[#722f37] text-white px-4 py-2 rounded-md hover:bg-[#5a252c] transition duration-300 mt-2">
                     <button>
                         Partners
