--- a/index.html
+++ b/index.html
@@ -15,12 +15,19 @@
         .font-montserrat {
             font-family: 'Montserrat', sans-serif;
         }
+        @media (min-width: 768px){
+            .inner-round {
+                background: rgb(255, 255, 255);
+                -webkit-mask-image: radial-gradient(ellipse 105% 127px at 100% 114%, /* Wider elliptical shape */ transparent 0, transparent 202px, /* Curve start */ black 46px /* Curve end */);
+                
+            }
+        }
     </style>
 </head>
 
 <body>
     <!-- navbar section started -->
-    <nav class="bg-[#f5e7d6] border-b border-[#d4cabe]">
+    <nav class="bg-white shadow">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between h-16 items-center">
                 <!-- brand name  -->
@@ -33,10 +40,11 @@
                 </div> -->
 
                 <!-- Logo -->
-                <div class="flex-shrink-0">
-                    <!-- Responsive logo with different sizes for different screens -->
-                    <img class="h-8 md:h-10 lg:h-12 w-auto" src="./assets/logo/Cheerstag.png" alt="Cheerstag logo">
+                <div class="flex-shrink-0 md:absolute  md:-left-3 md:top-1 h-38 inner-round">
+                    <img class="h-10 md:h-10 lg:h-16 my-2 w-auto md:-rotate-20 " src="./assets/logo/Cheerstag.png"
+                        alt="Cheerstag logo">
                 </div>
+
 
                 <!-- Desktop Menu with equal spacing -->
                 <div class="hidden md:flex flex-1 justify-center items-center mx-auto">
@@ -65,7 +73,7 @@
 
                     <!-- Mobile menu button (only visible on mobile) -->
                     <button type="button" id="mobile-menu-button"
-                        class="md:hidden inline-flex items-center justify-center p-2 rounded-md text-gray-700 hover:text-[#722f37] hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-[#722f37]"
+                        class="md:hidden inline-flex items-center justify-star p-2 rounded-md text-gray-700 hover:text-[#722f37] hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-[#722f37]"
                         aria-controls="mobile-menu" aria-expanded="false">
                         <span class="sr-only">Open main menu</span>
                         <!-- Hamburger icon -->
@@ -109,7 +117,151 @@
         </div>
     </nav>
     <!-- navbar section ended -->
-    <section>
+
+    <!-- main section  -->
+    <section class="bg-[#ffe8e6]">
+        <div class="container mx-auto px-4 py-12 md:py-20 ">
+            <div class="flex flex-col md:flex-row md:justify-between items-center gap-8 lg:gap-12">
+                <!-- Left Section (Text + Button) -->
+                <div class="mt-10 mx-auto md:ms-12 w-full md:w-auto space-y-8 text-center md:text-left self-start">
+                    <!-- Heading -->
+                    <h1
+                        class="font-passenger text-4xl sm:text-4xl lg:text-6xl font-bold text-[#802311] md:text-start leading-tight">
+                        Maak je cadeau extra <br class="hidden md:block"> bijzonder met een <br class="hidden md:block">
+                        persoonlijke boodschap
+                    </h1>
+
+                    <!-- Button -->
+                    <button
+                        class="mt-16 mx-auto md:ms-8 font-passenger px-8 py-4 text-2xl bg-[#044446] hover:bg-[#033336] text-white rounded-lg transition duration-300 text-center md:text-start">
+                        Creëer <span class="underline underline-offset-4 decoration-2">hier</span> jouw unieke
+                        boodschap!<br>
+                        <span class="block">Voeg je tekst, audio, of video toe.</span>
+                    </button>
+                </div>
+
+                <!-- Right Section (Image) -->
+                <div class="md:w-[37%]">
+                    <img src="./assets/images/CheersTag-bg.png" alt="Sample Image" class="w-full h-auto">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- footer started  -->
+    <footer class="w-full bg-[#0a6d71] text-white text-2xl py-8 px-4 sm:px-6">
+        <div class="mx-auto max-w-7xl">
+            <!-- Main Footer Content - Custom layout for mobile -->
+            <div class="flex flex-col mb-8 md:grid md:grid-cols-3 md:mx-10 md:gap-10 ">
+                <!-- Brand Column  -->
+                <div class="space-y-4 mb-8 md:mb-0">
+                    <!-- Heading centered on mobile, left on desktop -->
+                    <h4 class="text-sm font-montserrat text-center md:text-start">CheersTag.com</h4>
+
+                    <!-- Paragraph centered on mobile, left on desktop -->
+                    <p class="text-sm leading-relaxed font-montserrat text-center md:text-start">
+                        Verbind uw geschenken met persoonlijke boodschappen. Maak van elk cadeau een blijvende
+                        herinnering.
+                    </p>
+
+                    <!-- Social links -->
+                    <div class="flex flex-wrap gap-3 pt-2 justify-center md:justify-start">
+                        <a href="#" class="text-sm hover:underline font-montserrat">Facebook</a>
+                        <a href="#" class="text-sm hover:underline font-montserrat">Instagram</a>
+                        <a href="#" class="text-sm hover:underline font-montserrat">Twitter</a>
+                        <a href="#" class="text-sm hover:underline font-montserrat">E-mail</a>
+                    </div>
+                    <div class="flex flex-wrap gap-3 pt-3 lg:pt-7 justify-center md:justify-start">
+                        <a href="#" class="text-sm hover:underline font-montserrat"> <span>© 2024 Cheers'Tag.com</span>
+                        </a>
+
+                    </div>
+                </div>
+
+                <!-- Combined Columns Container  -->
+                <div class="grid grid-cols-2 md:gap-30  mx-auto md:col-span-2 justify-between ">
+                    <!-- Links Column -->
+                    <div class="space-y-4 text-center">
+                        <h4 class="text-sm font-montserrat text-center md:text-start">Links</h4>
+                        <ul class="space-y-2">
+                            <li><a href="#"
+                                    class="text-sm hover:underline font-montserrat block text-center md:text-left">Home</a>
+                            </li>
+                            <li><a href="#"
+                                    class="text-sm hover:underline font-montserrat block text-center md:text-left">Hoe
+                                    het
+                                    werkt</a></li>
+                            <li><a href="#"
+                                    class="text-sm hover:underline font-montserrat block text-center md:text-left">Over
+                                    ons</a>
+                            </li>
+                            <li><a href="#"
+                                    class="text-sm hover:underline font-montserrat block text-center md:text-left">Contact</a>
+                            </li>
+                            <li><a href="#"
+                                    class="text-sm hover:underline font-montserrat block text-center md:text-left">Partners</a>
+                            </li>
+                        </ul>
+                        <div class="flex flex-wrap gap-3 pt-2 justify-center md:justify-start">
+                            <a href="#" class="text-sm hover:underline font-montserrat"> <span>Alle rechten
+                                    voorbehouden.</span>
+                            </a>
+
+                        </div>
+                    </div>
+
+                    <!-- Contact Column -->
+                    <div class="space-y-4">
+                        <h4 class="text-sm font-montserrat text-center md:text-start">Contact</h4>
+                        <ul class="space-y-2">
+                            <li class="text-sm text-center md:text-left font-montserrat font-montserrat">Cheers'Tag.com
+                            </li>
+                            <li class="text-sm text-center md:text-left font-montserrat font-montserrat">Amstelveen</li>
+                            <li class="text-sm text-center md:text-left font-montserrat font-montserrat">
+                                info@cheerstag.com</li>
+                            <li class="text-sm text-center md:text-left font-montserrat font-montserrat">+31 (0)6
+                                42752700</li>
+                        </ul>
+                        <div class="flex flex-wrap gap-1 md:gap-3 pt-9 justify-center md:justify-start">
+                            </a>
+                            <a href="#" class="text-sm hover:underline font-montserrat"> <span>Privacybeleid</span>
+                                <a href="#" class="text-sm hover:underline font-montserrat">
+                                    <span>Gebruiksvoorwaarden</span>
+                                </a>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Footer Bottom -->
+            <div class=" pt-6">
+                <div class="flex flex-col items- gap-4 text-sm sm:flex-row sm:justify-between">
+                    <!-- <span>© 2024 Cheers'Tag.com</span> -->
+                    <!-- <span>Alle rechten voorbehouden</span> -->
+                    <!-- <div class="flex flex-wrap justify-center gap-4 sm:gap-6 order-first sm:order-none">
+                    <a href="#" class="hover:underline">Alle rechten voorbehouden.</a>
+                </div> -->
+                    <!-- <div class="flex flex-wrap self-start gap-4 sm:gap-6 sm:order-none">
+                        <a href="#" class="hover:underline">Privacybeleid</a>
+                        <a href="#" class="hover:underline">Gebruiksvoorwaarden</a>
+                    </div> -->
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!-- footer ended  -->
+
+
+
+
+
+
+
+
+
+    <!-- old section below -->
+    <!-- <section>
         <div class="container mx-auto px-4 py-5 md:py-12 lg:py-10 text-center w-[60%] mt-20">
             <h1
                 class="text-3xl sm:text-4xl md:text-5xl lg:text-5xl font-bold text-[#722f37] mb-1 md:mb-1 font-passenger">
@@ -120,9 +272,9 @@
                 Maak van elk cadeau een blijvende herinnering met een <br> digitale boodschap.
             </p>
         </div>
-        <!-- buttons section  -->
+        // buttons section  //
         <div class="flex flex-col sm:flex-row gap-4 w-full max-w-[70%] mx-auto p-4">
-            <!-- first Button -->
+            // first Button //
             <a href="./pages/boodschap.html"
                 class="flex-1 bg-[#722f37] hover:bg-[#5a252c] text-white font-medium py-4 px-6 rounded-lg shadow-md hover:shadow-lg transition-all duration-300 text-center transform hover:scale-[1.02]">
                 <button>
@@ -133,7 +285,7 @@
                 </button>
             </a>
 
-            <!-- Second Button -->
+            // Second Button //
             <a href="./pages/werkt.html"
                 class="flex-1 border-2 border-[#722f37] text-[#722f37] hover:bg-gray-50 font-medium py-4 px-6 rounded-lg shadow-sm hover:shadow-md transition-all duration-300 text-center transform hover:scale-[1.02]">
                 <button>
@@ -145,7 +297,7 @@
             </a>
 
         </div>
-    </section>
+    </section> -->
 
 
 
