--- a/pages/werkt.html
+++ b/pages/werkt.html
@@ -101,7 +101,7 @@
     <!-- navbar section ended -->
 
     <!-- main section started  -->
-    <section class="bg-[#f4e6d3] shadow-lg lg:pb-20 py-18">
+    <section class="bg-[#f4e6d3] shadow-lg mx-auto px-4 py-8 sm:px-6 lg:px-8">
 
         <div class="container mx-auto px-4 py-5 md:py-12 lg:py-10 text-center">
             <h1 class="font-passenger text-3xl sm:text-4xl md:text-5xl lg:text-5xl font-bold text-[#722f37] mb-1 md:mb-1">
@@ -112,7 +112,117 @@
                 In enkele eenvoudige stappen maak je van elk cadeau een blijvende herinnering
             </p>
         </div>
-        <div class="flex justify-center w-full">
+        <!-- first list section  -->
+
+    <div class="mt-20">
+        <ul class="md:grid md:grid-cols-3 md:col-gap-10 md:row-gap-10 gap-2">
+            <li class=" bg-white p-5 pb-10 text-center rounded-lg">
+                <div class="flex flex-col items-center">
+                    <div class="flex-shrink-0 relative top-0 -mt-16">
+                        <div
+                            class="flex items-center justify-center h-20 w-20 rounded-full bg-[#722f37] text-white border-4 border-white text-xl font-semibold">
+                            1
+                        </div>
+                    </div>
+                    <div class="mt-4">
+                        <h4 class="text-lg leading-6 font-montserrat text-[#722f37] ">Scan de QR</h4>
+                        <p class="mt-2 text-base leading-6 text-gray-500 font-montserrat">
+                           Gebruik de QR-code op het CheersTag kaartje
+                        </p>
+                    </div>
+                </div>
+            </li>
+            <li class=" bg-white p-5 pb-10 text-center rounded-lg">
+                <div class="flex flex-col items-center">
+                    <div class="flex-shrink-0 relative top-0 -mt-16">
+                        <div
+                            class="flex items-center justify-center h-20 w-20 rounded-full bg-[#722f37] text-white border-4 border-white text-xl font-semibold">
+                            2
+                        </div>
+                    </div>
+                    <div class="mt-4">
+                        <h4 class="text-lg leading-6 font-montserrat text-[#722f37] ">Maak het persoonlijk</h4>
+                        <p class="mt-2 text-base leading-6 text-gray-500 font-montserrat">
+                            Voeg je eigen tekst, foto of video toe die een glimlach tovert
+                        </p>
+                    </div>
+                </div>
+            </li>
+            <li class=" bg-white p-5 pb-10 text-center rounded-lg">
+                <div class="flex flex-col items-center">
+                    <div class="flex-shrink-0 relative top-0 -mt-16">
+                        <div
+                            class="flex items-center justify-center h-20 w-20 rounded-full bg-[#722f37] text-white border-4 border-white text-xl font-semibold">
+                            3
+                        </div>
+                    </div>
+                    <div class="mt-4">
+                        <h4 class="text-lg leading-6 font-montserrat text-[#722f37] ">Klaar!</h4>
+                        <p class="mt-2 text-base leading-6 text-gray-500 font-montserrat">
+                            Je cadeau heeft nu een digitaal hartje gekregen
+                        </p>
+                    </div>
+                </div>
+            </li>
+            
+        </ul>
+    </div>
+    <!-- second list section  -->
+    <div class="mt-20">
+        <ul class="md:grid md:grid-cols-3 md:col-gap-10 md:row-gap-10 gap-2">
+            <li class=" bg-white p-5 pb-10 text-center rounded-lg">
+                <div class="flex flex-col items-center">
+                    <div class="flex-shrink-0 relative top-0 -mt-16">
+                        <div
+                            class="flex items-center justify-center h-20 w-20 rounded-full bg-[#722f37] text-white border-4 border-white text-xl font-semibold">
+                            4
+                        </div>
+                    </div>
+                    <div class="mt-4">
+                        <h4 class="text-lg leading-6 font-montserrat text-[#722f37] ">Voor altijd verbonden</h4>
+                        <p class="mt-2 text-base leading-6 text-gray-500 font-montserrat">
+                           Wanneer de ontvanger later de QR scant, zien ze jouw speciale boodschap terug
+                        </p>
+                    </div>
+                </div>
+            </li>
+            <li class=" bg-white p-5 pb-10 text-center rounded-lg">
+                <div class="flex flex-col items-center">
+                    <div class="flex-shrink-0 relative top-0 -mt-16">
+                        <div
+                            class="flex items-center justify-center h-20 w-20 rounded-full bg-[#722f37] text-white border-4 border-white text-xl font-semibold">
+                            5
+                        </div>
+                    </div>
+                    <div class="mt-4">
+                        <h4 class="text-lg leading-6 font-montserrat text-[#722f37] ">Direct bedanken</h4>
+                        <p class="mt-2 text-base leading-6 text-gray-500 font-montserrat">
+                            Met één tik kan de ontvanger een warm bedankje terug sturen
+                        </p>
+                    </div>
+                </div>
+            </li>
+            <li class=" bg-white p-5 pb-10 text-center rounded-lg">
+                <div class="flex flex-col items-center">
+                    <div class="flex-shrink-0 relative top-0 -mt-16">
+                        <div
+                            class="flex items-center justify-center h-20 w-20 rounded-full bg-[#722f37] text-white border-4 border-white text-xl font-semibold">
+                            6
+                        </div>
+                    </div>
+                    <div class="mt-4">
+                        <h4 class="text-lg leading-6 font-montserrat text-[#722f37] ">Herinneringen die blijven!</h4>
+                        <p class="mt-2 text-base leading-6 text-gray-500 font-montserrat">
+                            Een klein gebaar dat jaren later nog steeds een lach brengt
+                        </p>
+                    </div>
+                </div>
+            </li>
+            
+        </ul>
+    </div>
+        <!-- old list  -->
+        <!-- <div class="flex justify-center w-full">
             <ol class="lg:w-[45%] w-full space-y-4 p-2">
                 <li class="flex justify-start shadow align-center rounded-md bg-gray-100 p-2">
                     <div
@@ -176,7 +286,7 @@
                 </li>
 
             </ol>
-        </div>
+        </div> -->
         <div class="mx-auto py-5  text-center items-center">
             <p class="text-base sm:text-md md:text-lg text-[#722f37] leading-relaxed md:leading-loose font-montserrat">
                 Klaar om je eerste digitale boodschap te maken?
@@ -189,77 +299,94 @@
     </section>
 
     <!-- footer started  -->
-    <footer class="w-full bg-[#722f37]">
-        <div class="mx-auto max-w-7xl px-6 lg:px-8">
-            <!--Grid-->
-            <div class="grid grid-cols-2 sm:grid-cols-4 lg:grid-cols-14 gap-4 lg:gap-8 pt-10 pb-4">
-                <div class="col-span-full lg:col-span-4 lg:col-start-3 mb-10 lg:mb-0">
-                    <a href="#" class="flex justify-center lg:justify-start">
-                        <h4 class="text-lg text-white font-bold mb-3 text-[20px] font-passenger">CheersTag.com</h4>
-                    </a>
-                    <p class=" text-sm text-white lg:max-w-xs text-center lg:text-left">Verbind uw geschenken met
-                        persoonlijke
-                        boodschappen. Maak van elk cadeau een blijvende herinnering.</p>
-                    <!-- footer icons  -->
-                    <div class="py-3 flex mt-4 gap-5 justify-center lg:justify-start sm:mt-0">
-                        <!-- facebook  -->
-                        <a href="#" class="w-7 h-7 flex justify-center items-center ">
-                            <img src="../assets/icons/facebook.svg" alt="facebook">
-                        </a>
-                        <!-- instagram  -->
-                        <a href="#" class="w-7.5 h-7 flex justify-center items-center ">
-                            <img src="../assets/icons/instagram.svg" alt="instagram">
-                        </a>
-                        <!-- twitter  -->
-                        <a href="#" class="w-9 h-7 mx-0.5 flex justify-center items-center ">
-                            <img src="../assets/icons/twitter.svg" alt="twitter">
-                        </a>
-                        <!-- mail  -->
-                        <a href="#" class="w-9 h-6 flex justify-center items-center ">
-                            <img src="../assets/icons/mail.svg" alt="mail">
+    <footer class="bg-[#0a6d71] text-white text-2xl py-5 px-4 sm:px-6">
+        <div class="mx-auto max-w-7xl">
+            <!-- Main Footer Content - Custom layout for mobile -->
+            <div class="flex flex-col md:grid md:grid-cols-3 md:mx-10 md:gap-10 ">
+                <!-- Brand Column  -->
+                <div class="space-y-4 mb-8 md:mb-0">
+                    <!-- Heading centered on mobile, left on desktop -->
+                    <h4 class="text-sm font-montserrat text-center md:text-start"><a href="./index.html">CheersTag.com</a></h4>
+
+                    <!-- Paragraph centered on mobile, left on desktop -->
+                    <p class="text-sm leading-relaxed font-montserrat text-center md:text-start">
+                        Verbind uw geschenken met persoonlijke boodschappen. Maak van elk cadeau een blijvende
+                        herinnering.
+                    </p>
+
+                    <!-- Social links -->
+                    <div class="flex flex-wrap gap-3 pt-2 justify-center md:justify-start">
+                        <a href="#" class="text-sm hover:underline font-montserrat">Facebook</a>
+                        <a href="#" class="text-sm hover:underline font-montserrat">Instagram</a>
+                        <a href="#" class="text-sm hover:underline font-montserrat">Twitter</a>
+                        <a href="#" class="text-sm hover:underline font-montserrat">E-mail</a>
+                    </div>
+                    <div class="flex flex-wrap gap-3 pt-3 lg:pt-7 justify-center md:justify-start">
+                        <a href="#" class="text-sm hover:underline font-montserrat"> <span>© 2024 Cheers'Tag.com</span>
                         </a>
 
                     </div>
                 </div>
-                <!--End Col-->
-                <div class="lg:col-span-4 lg:col-start-7 md:col-span-1 md:col-start-2 text-center sm:text-center">
-                    <h4 class="text-lg text-white font-bold mb-3 text-[20px] font-passenger">Links</h4>
-                    <ul class="text-sm  transition-all duration-500">
-                        <li class="mb-3"><a href="../index.html" class="text-white hover:text-white">Home</a></li>
-                        <li class="mb-3"><a href="./werkt.html" class="text-white hover:text-white">Hoe het werkt</a>
-                        </li>
-                        <li class="mb-3"><a href="./over-ons.html" class="text-white hover:text-white">Over ons</a></li>
-                        <li class="mb-3"><a href="#" class="text-white hover:text-white">Contact</a></li>
-                        <li><a href="./partners.html" class="text-white hover:text-white">Partners</a></li>
-                    </ul>
-                </div>
-                <!--End Col-->
-                <div class="lg:col-span-2 text-center sm:text-left">
-                    <h4 class="text-lg text-white font-bold mb-3 text-[20px] font-passenger">Contact</h4>
-                    <ul class="text-sm transition-all duration-500">
-                        <li class="mb-3"><a href="../index.html" class="text-white hover:text-white ">CheersTag.com</a>
-                        </li>
-                        <li class="mb-3"><a href="#" class="text-white hover:text-white">Amstelveen</a></li>
-                        <li class="mb-3"><a href="#" class="text-white hover:text-white">info@cheerstag.com</a></li>
-                        <li><a href="#" class="text-white hover:text-white">+31 (0)6 42752700</a></li>
-                    </ul>
-                </div>
-            </div>
-            <!-- horizontal line  -->
-            <hr class="w-[72%] mx-auto text-[#8b4850a6] my-2">
-            <!--Grid-->
-            <div class="py-4">
-                <div class="flex items-center justify-center flex-col gap-1 lg:justify-around  lg:flex-row">
-                    <span class="text-sm text-white">©<a href="#">pagedone</a>2024, All rights reserved.</span>
-                    <ul class="flex items-center gap-9 mt-4 lg:mt-0">
-                        <li><a href="#" class="text-sm text-white">Privacybeleid</a></li>
-                        <li><a href="#" class="text-sm text-white">Gebruiksvoorwaarden</a></li>
-                    </ul>
+
+                <!-- Combined Columns Container  -->
+                <div class="grid grid-cols-2 md:gap-30  mx-auto md:col-span-2 justify-between ">
+                    <!-- Links Column -->
+                    <div class="space-y-4 text-center">
+                        <h4 class="text-sm font-montserrat text-center md:text-start">Links</h4>
+                        <ul class="space-y-2">
+                            <li><a href="./index.html"
+                                    class="text-sm hover:underline font-montserrat block text-center md:text-left">Home</a>
+                            </li>
+                            <li><a href="./pages/werkt.html"
+                                    class="text-sm hover:underline font-montserrat block text-center md:text-left">Hoe
+                                    het
+                                    werkt</a></li>
+                            <li><a href="./pages/over-ons.html"
+                                    class="text-sm hover:underline font-montserrat block text-center md:text-left">Over
+                                    ons</a>
+                            </li>
+                            <li><a href="#"
+                                    class="text-sm hover:underline font-montserrat block text-center md:text-left">Contact</a>
+                            </li>
+                            <li><a href="./pages/partners.html"
+                                    class="text-sm hover:underline font-montserrat block text-center md:text-left">Partners</a>
+                            </li>
+                        </ul>
+                        <div class="flex flex-wrap gap-3 pt-2 justify-center md:justify-start">
+                            <a href="#" class="text-sm hover:underline font-montserrat"> <span>Alle rechten
+                                    voorbehouden.</span>
+                            </a>
+
+                        </div>
+                    </div>
+
+                    <!-- Contact Column -->
+                    <div class="space-y-4">
+                        <h4 class="text-sm font-montserrat text-center md:text-start">Contact</h4>
+                        <ul class="space-y-2">
+                            <li class="text-sm text-center md:text-left font-montserrat font-montserrat">Cheers'Tag.com
+                            </li>
+                            <li class="text-sm text-center md:text-left font-montserrat font-montserrat">Amstelveen</li>
+                            <li class="text-sm text-center md:text-left font-montserrat font-montserrat">
+                                info@cheerstag.com</li>
+                            <li class="text-sm text-center md:text-left font-montserrat font-montserrat">+31 (0)6
+                                42752700</li>
+                        </ul>
+                        <div class="flex flex-wrap gap-1 md:gap-3 pt-9 justify-center md:justify-start">
+                            </a>
+                            <a href="#" class="text-sm hover:underline font-montserrat"> <span>Privacybeleid</span>
+                                <a href="#" class="text-sm hover:underline font-montserrat">
+                                    <span>Gebruiksvoorwaarden</span>
+                                </a>
+
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </footer>
     <!-- footer ended  -->
+   
 
 
 
